# oomd

./: .gitignore  .travis.yml  CONTRIBUTING.md  Config.cpp  Config.h  ConfigTest.cpp  Log.cpp  Log.h  LogTest.cpp  Main.cpp  OomDetector.cpp  OomDetector.h  OomDetectorTest.cpp  OomKiller.cpp  OomKiller.h  OomKillerTest.cpp  Oomd.cpp  Oomd.h  OomdContext.cpp  OomdContext.h  OomdContextTest.cpp  OomdTest.cpp  PluginRegistry.cpp  PluginRegistry.h  README.md  Stats.cpp  Stats.h  StatsClient.cpp  StatsTest.cpp  build-from-github.sh  clang-format.sh  help.html  index.html  meson.build  meson_options.txt  mostcurrent.patch  newest3.patch  rebuild.sh  sitemap.xml  vcs_tagger.sh
.github/workflows/: ci.yml
blog/: atom.xml  feed.xml  index.html
config/: CompactConfigParser.cpp  CompactConfigParser.h  ConfigCompiler.cpp  ConfigCompiler.h  ConfigCompilerTest.cpp  ConfigTypes.cpp  ConfigTypes.h  JsonConfigParser.cpp  JsonConfigParserTest.cpp
css/: main.css
docs/: another-doc.html  another-doc.md  auxiliary_plugins.md  configuration.md  core_plugins.md  drop_in_configs.md  io_cost.md  oomd-casestudy.html  oomd-casestudy.md  overview.html  overview.md  prekill_hooks.md  production_setup.md  release_process.md  ruleset_cgroup.md  stats.md  writing_a_kill_plugin.md  writing_a_plugin.md
en/: help.html  index.html
engine/: BasePlugin.h  DetectorGroup.cpp  DetectorGroup.h  Engine.cpp  Engine.h  Ruleset.cpp  Ruleset.h
etc/: desktop.json
example/: oomd.json
fixtures/: oomd.json  oomd.rulesets  oomd_0_1_0.json  oomd_0_1_1.json  oomd_0_2_0.json  oomd_1_0_0.json  oomd_tunables.override
fixtures/cgroup/service4.service/: memory.pressure
fixtures/cgroup/system.slice/: io.stat  memory.stat  memory.swap.current
fixtures/cgroup/workload.slice/: io.pressure  memory.low
fixtures/plugins/memory_above/: meminfo
fixtures/plugins/memory_reclaim/: vmstat
fixtures/plugins/swap_free/: enough_swap  low_swap  meminfo_enough  meminfo_low
fixtures/proc/: vmstat
include/: Assert.cpp  Assert.h  AssertTest.cpp  CgroupPath.cpp  CgroupPath.h  CgroupPathTest.cpp  Defines.h  Types.h
man/: oomd.1
oomd/: CoreStats.h  Main.cpp  Oomd.cpp  Oomd.h  OomdContext.cpp  OomdContext.h  OomdContextTest.cpp  OomdTest.cpp  PluginRegistry.cpp  PluginRegistry.h  Stats.cpp  Stats.h  build-from-github.sh  meson.build
oomd/config/: ConfigCompiler.cpp
oomd/engine/: DetectorGroup.cpp  Engine.cpp  EngineTypes.h
oomd/etc/: oomd.service
oomd/fixtures/: oomd.json
oomd/fixtures/proc/: mounts
oomd/include/: Assert.cpp  CgroupPathTest.cpp  CoreStats.h
oomd/plugins/: BaseKillPlugin.cpp  BaseKillPlugin.h  ContinuePlugin.cpp  CorePluginsTest.cpp  KillIOCost-inl.h  KillMemoryGrowth-inl.h  KillPressure-inl.h  KillPressure.h  KillSwapUsage-inl.h  KillSwapUsage.cpp  MemoryAbove.cpp  MemoryAbove.h  MemoryReclaim.cpp  PressureAbove.cpp
oomd/plugins/systemd/: SystemdRestart.cpp
oomd/util/: FsTest.cpp
plugins/: AdjustCgroup.cpp  AdjustCgroup.h  BaseKillPlugin.cpp  BaseKillPlugin.h  BaseSystemdPlugin.cpp  ContinuePlugin.h  CorePluginsTest.cpp  DumpCgroupOverview.cpp  DumpCgroupOverview.h  Exists.cpp  KillIOCost-inl.h  KillIOCost.h  KillMemoryGrowth-inl.h  KillMemoryGrowth.cpp  KillMemoryGrowth.h  KillPressure-inl.h  KillPressure.cpp  KillPressure.h  KillSwapUsage-inl.h  KillSwapUsage.h  MemoryAbove.cpp  MemoryAbove.h  MemoryReclaim-inl.h  MemoryReclaim.cpp  MemoryReclaim.h  OomKillerNoop.cpp  OomKillerNoop.h  Plugins.h  PressureAbove.cpp  PressureAbove.h  PressureRisingBeyond.cpp  PressureRisingBeyond.h  SwapFree.cpp  SwapFree.h  SystemdRestart-inl.h  SystemdRestart.cpp  SystemdRestart.h
plugins/systemd/: BaseSystemdPlugin.cpp  BaseSystemdPlugin.h  SystemdPluginsTest.cpp  SystemdRestart-inl.h  SystemdRestart.h
shared/: KillList.h  OomdContext.cpp  OomdContextTest.cpp  Plugin.h  Tunables.cpp  Tunables.h
src/oomd/: CgroupContext.cpp  CgroupContext.h  CgroupContextTest.cpp  Log.cpp  Log.h  LogTest.cpp  Main.cpp  NewOomdContext.cpp  NewOomdContext.h  NewOomdContextTest.cpp  Oomd.cpp  Oomd.h  OomdContext.cpp  OomdContext.h  OomdContextTest.cpp  OomdTest.cpp  PluginConstructionContext.cpp  PluginConstructionContext.h  PluginRegistry.h  Stats.cpp  Stats.h  StatsClient.cpp  StatsClient.h  StatsTest.cpp  fb-oomd.service
src/oomd/cfgen/: packman.yml
src/oomd/config/: ConfigCompiler.cpp  ConfigCompiler.h  ConfigCompilerTest.cpp  ConfigTypes.cpp  ConfigTypes.h  JsonConfigParser.cpp  JsonConfigParser.h  JsonConfigParserTest.cpp
src/oomd/dropin/: DropInServiceAdaptor.cpp  DropInServiceAdaptor.h  DropInServiceAdaptorTest.cpp  FsDropInService.cpp  FsDropInService.h  FsDropInServiceTest.cpp
src/oomd/engine/: BasePlugin.h  DetectorGroup.cpp  DetectorGroup.h  Engine.cpp  Engine.h  PrekillHook.h  Ruleset.cpp  Ruleset.h
src/oomd/etc/: desktop.json  freezer_bench.json  main_policy.json  oomd.service.in  throttle_bench.json
src/oomd/fixtures/: FsFixture.cpp  FsFixture.h  oomd.json
src/oomd/include/: AssertTest.cpp  CgroupPath.cpp  CgroupPath.h  CgroupPathTest.cpp  CoreStats.h  Types.h  Version.h.in
src/oomd/plugins/: AdjustCgroup.cpp  AdjustCgroup.h  BaseKillPlugin.cpp  BaseKillPlugin.h  ChangeMadviseToDontNeed.cpp  ChangeMadviseToDontNeed.h  (+59 more)
testFiles/: FreezeAndPageOut.cpp  PageInAndUnfreeze.cpp  b.out  check.sh  check_memory_reclaim.sh  init_cgroups.sh  madvise_test  madvise_test.cpp  override_madvise.c  override_madvise.cpp  redis_and_nas_benchmark.sh  run.sh  run_npb.sh  stop_benchmark_services.sh  test_freeze.sh  test_throttle.sh  test_victim_oomd.sh  track_madvise.sh  unfreeze_and_kill.sh  victim.cpp  victim.out  watch_indicator.sh
testFiles/NPB3.4.2/: NPB3.4-HPF.README  NPB3.4-JAV.README  NPB3.4-SER.README  README
testFiles/results/: memtier_no_oomd.out  no_oomd_strees_25s  no_oomd_strees_50s  oomd_strees_25s  oomd_strees_50s
test_plugin/: main.cpp  run.sh  test_freeze.sh  unfreeze_and_kill.sh  victim.cpp  victim.out
util/: Fs.cpp  Fs.h  FsTest.cpp  ScopeGuard.h  ScopeGuardTest.cpp  Util.cpp  Util.h  UtilTest.cpp
website/: package.json  sidebars.json  siteConfig.js
website/core/: Footer.js
(+437 files in other folders)
